tests/error/misc_errors/custom_no_signature.err
Error: Type signature missing (at $FILE:8:0)
  | 
6 | 
7 | @guppy.custom(module=module)
8 | def foo(x): ...
  | ^^^^^^^^^^^^^^^ Custom function `foo` requires a type signature

Help: Annotate the type signature of `foo` or disallow the use of `foo` as a
higher-order value: `@guppy.custom(..., higher_order_value=False)`

Guppy compilation failed due to 1 previous error
